# util

./: .gitignore  CMakeLists.txt  JobQueue.h  Misc.cpp  Misc.h  README.md  String.h  Test.h
geo/: Box.h  CircularSegment.tpp  Collection.h  DE9IMatrix.h  Geo.cpp  Geo.h  Geo.tpp  IntervalIdx.h  Line.h  Point.h  PolyLine.h  PolyLine.tpp  Polygon.h  RTree.tpp  XSortedCollection.h  XSortedCollection.tpp
geo/output/: GeoJsonOutput.tpp
graph/: Algorithm.h  BiDijkstra.h  Dijkstra.h  EDijkstra.h  ShortestPath.h
http/: Server.cpp  Server.h
json/: Writer.h
log/: Log.h
protobuf/: Protobuf.h
tests/: CMakeLists.txt  GeoTest.cpp  GeoTest.h  GeoTestAngles.cpp  GeoTestCRS.cpp  GeoTestDE9IM.cpp  GeoTestDist.cpp  GeoTestFrechet.cpp  GeoTestGeometryBasics.cpp  GeoTestGrid.cpp  GeoTestLineLinePredicates.cpp  GeoTestLineOps.cpp  GeoTestLinePolygonPredicates.cpp  GeoTestPolygonFill.cpp  GeoTestPolygonInternals.cpp  GeoTestPolygonPolygonPredicates.cpp  GeoTestRTree.cpp  GeoTestSegmentOrdering.cpp  GeoTestSignedRingArea.cpp  GeoTestWKTParsing.cpp  GeoTestWktParseCollection.cpp  GeoTestWktParseLine.cpp  GeoTestWktParseMultiLine.cpp  GeoTestWktParseMultiPoint.cpp  GeoTestWktParseMultiPolygon.cpp  GeoTestWktParsePoint.cpp  GeoTestWktParsePolygon.cpp  GeoTestWktSerialize.cpp  GeoTestXSortedPolygons.cpp  TestMain.cpp
tests/datasets/: flixbus.tsv  germany.tsv  spain.tsv
xml/: XmlWriter.cpp  XmlWriter.h
